Fix issue with signing in after ChromeVox was enabled in login screen

The call to AccessibilityExtensionLoader::SetProfile from
AccessibilityManager::SetProfile was causing a race condition that left
ChromeVox in a partially-loaded state, i.e. the extension was active but
AccessibilityManager thought it was not.

It turns out this call isn't necessary at all, because it's already
going to be triggered by AccessibilityManager::UpdateSpokenFeedbackFromPref()
either way.

Kevin Chao and I manually tested with this patch and confirmed that this
fixes this specific issue and doesn't cause any new regressions.

BUG=669413
TESTED=Try various permutations of signing in and out with ChromeVox off and on
TBR=dtseng@chromium.org

Review-Url: https://codereview.chromium.org/2597793002
Cr-Commit-Position: refs/heads/master@{#440261}

Former-commit-id: a878ed97521d84503ccb0d7f77666d45bfd52fa9